[gd_scene load_steps=5 format=2]

[ext_resource path="res://resoure/root/root_len.tres" type="Texture" id=1]
[ext_resource path="res://node/mouse_root/mouse_root_len.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="CircleShape2D" id=2]

[node name="mouse_root_len" type="Sprite"]
texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -64, 0 )
shape = SubResource( 1 )

[node name="Area2D2" type="Area2D" parent="."]
monitorable = false

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D2"]
position = Vector2( 64, 0 )
shape = SubResource( 2 )

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="area_entered" from="Area2D2" to="." method="_on_Area2D2_area_entered"]
[connection signal="area_exited" from="Area2D2" to="." method="_on_Area2D2_area_exited"]
